--- a/TortyMozyrApp/Podfile
+++ b/TortyMozyrApp/Podfile
@@ -10,6 +10,8 @@ pod 'Firebase/Core'
 pod 'Firebase/Auth'
 pod 'Firebase/Database'
 
+pod 'TTGTagCollectionView'
+
 pod 'SnapKit', '~> 5.0.0'
 
 pod 'lottie-ios'
