add CV with promotions on homepage

--- a/TortyMozyrApp/Podfile
+++ b/TortyMozyrApp/Podfile
@@ -12,6 +12,8 @@ pod 'Firebase/Database'
 
 pod 'TTGTagCollectionView'
 
+pod 'youtube-ios-player-helper'
+
 pod 'SnapKit', '~> 5.0.0'
 
 pod 'lottie-ios'
